# iDCOL

./: .gitignore  CMakeLists.txt  README.md  build_mex.m  startup.asv  startup.m  usefulcodes.txt
core/: idcol_contactpair.hpp  idcol_implicitfamily.hpp  idcol_kkt.cpp  idcol_kkt.hpp  idcol_newton.cpp  idcol_newton.hpp  idcol_solve.cpp  idcol_solve.hpp  radial_bounds.cpp  radial_bounds.hpp  shape_core.cpp  shape_core.hpp
examples/: bench.cpp  ergodic.cpp  main.cpp
matlab_examples/: idcol_mex_phi_only_global.m  main.m  plot_implicit_surface.m
mex/: idcol_kkt_FJ_mex.cpp  idcol_kkt_FJ_mex.mexw64  idcol_kkt_mex.cpp  idcol_kkt_mex.mexw64  idcol_newton_mex.cpp  idcol_newton_mex.mexw64  idcol_newton_s_mex.cpp  idcol_newton_s_mex.mexw64  idcol_solve_mex.cpp  idcol_solve_mex.mexw64  radial_bounds_mex.cpp  radial_bounds_mex.mexw64  shape_core_mex.cpp  shape_core_mex.mexw64  shape_global_ax_mex.cpp  shape_global_ax_mex.mexw64  shape_local_mex.cpp  shape_local_mex.mexw64
tests/: main.asv  main.m  plot_implicit_surface.m  polytope_polytope.asv  polytope_polytope.m  test3.m
